--- a/eureka/apps/eureka/pom.xml
+++ b/eureka/apps/eureka/pom.xml
@@ -5,35 +5,16 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.5.6</version>
+    <groupId>de.codecentric</groupId>
+    <artifactId>spring-boot-admin-runtime-playground-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../../../pom.xml</relativePath>
   </parent>
 
-  <groupId>de.codecentric</groupId>
   <artifactId>eureka-server</artifactId>
   <packaging>jar</packaging>
   <name>${project.artifactId}</name>
-  <version>1.0.0-SNAPSHOT</version>
   <description>Eureka Server</description>
-
-  <properties>
-    <java.version>17</java.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring-cloud.version>2025.0.0</spring-cloud.version>
-  </properties>
-
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
 
   <dependencies>
     <dependency>
