--- a/kubernetes/apps/spring-boot-admin-discoveryclient/pom.xml
+++ b/kubernetes/apps/spring-boot-admin-discoveryclient/pom.xml
@@ -5,37 +5,20 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>4.0.2</version>
+    <groupId>de.codecentric</groupId>
+    <artifactId>spring-boot-admin-runtime-playground-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../../../pom.xml</relativePath>
   </parent>
 
-  <groupId>de.codecentric</groupId>
   <artifactId>spring-boot-admin-discoveryclient</artifactId>
   <packaging>jar</packaging>
   <name>${project.artifactId}</name>
-  <version>1.0.0-SNAPSHOT</version>
   <description>Spring Boot Admin</description>
 
   <properties>
-    <java.version>17</java.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring-boot-admin.version>4.0.0</spring-boot-admin.version>
     <spring-cloud.version>2025.1.1</spring-cloud.version>
   </properties>
-
-  <!-- Kubernetes Discovery -->
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
 
   <dependencies>
     <dependency>
