--- a/nacos/apps/hello-world/pom.xml
+++ b/nacos/apps/hello-world/pom.xml
@@ -5,22 +5,16 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.5.6</version>
+    <groupId>de.codecentric</groupId>
+    <artifactId>spring-boot-admin-runtime-playground-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../../../pom.xml</relativePath>
   </parent>
 
-  <groupId>de.codecentric</groupId>
   <artifactId>hello-world-nacos</artifactId>
   <packaging>jar</packaging>
   <name>${project.artifactId}</name>
-  <version>1.0.0-SNAPSHOT</version>
   <description>Hello World</description>
-
-  <properties>
-    <java.version>17</java.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
 
   <dependencies>
     <dependency>
