--- a/nginx/apps/hello-world/pom.xml
+++ b/nginx/apps/hello-world/pom.xml
@@ -3,21 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>4.0.2</version>
+		<groupId>de.codecentric</groupId>
+		<artifactId>spring-boot-admin-runtime-playground-parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../../../pom.xml</relativePath>
 	</parent>
 
-	<groupId>de.codecentric</groupId>
 	<artifactId>hello-world-nginx</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
 	<name>hello-world-nginx</name>
 	<description>hello world behind nginx reverse proxy</description>
-
-	<properties>
-		<java.version>17</java.version>
-		<spring-boot-admin.version>4.0.0</spring-boot-admin.version>
-	</properties>
 
 	<dependencies>
 		<dependency>
@@ -39,18 +33,6 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>de.codecentric</groupId>
-				<artifactId>spring-boot-admin-dependencies</artifactId>
-				<version>${spring-boot-admin.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-
 	<build>
 		<finalName>app</finalName>
 		<plugins>
