--- a/kubernetes/apps/health-simulator/pom.xml
+++ b/kubernetes/apps/health-simulator/pom.xml
@@ -57,6 +57,12 @@
               <goal>build-info</goal>
             </goals>
           </execution>
+          <execution>
+            <id>process-aot</id>
+            <goals>
+              <goal>process-aot</goal>
+            </goals>
+          </execution>
         </executions>
       </plugin>
       <!-- GIT-Infos for Info-Actuator -->
