--- a/kubernetes/apps/spring-boot-admin-kubernetes/Dockerfile
+++ b/kubernetes/apps/spring-boot-admin-kubernetes/Dockerfile
@@ -5,4 +5,6 @@ VOLUME /tmp
 
 COPY target/app.jar /opt/app/app.jar
 
+ENV SPRING_AOT_ENABLED=true
+
 CMD ["bash", "-c", "java $JAVA_OPTS -jar /opt/app/app.jar"]
