--- a/nginx/apps/hello-world/pom.xml
+++ b/nginx/apps/hello-world/pom.xml
@@ -66,6 +66,12 @@
 							<goal>build-info</goal>
 						</goals>
 					</execution>
+					<execution>
+						<id>process-aot</id>
+						<goals>
+							<goal>process-aot</goal>
+						</goals>
+					</execution>
 				</executions>
 			</plugin>
 		</plugins>
